part2/2.03/manifests/ping-pong/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: pingpong-log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      nodeSelector:
        project: pingpong-log
      containers:
        - name: ping-pong
          image: pedrocoelhodr/pingpong-app:1.2
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
